# mesh-file-share

./: .gitignore  README.en.md  README.md  client.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.client.ts
.github/workflows/: release.yml
dist-client/: client.html
dist-client/assets/: client-B3W575ea.js  client-C_1rp3KD.js  client-DGleoD_P.js  client-DOqtGKRp.js  client-DyeDCl0f.css
doc/: 時序圖.md
openspec/: config.yaml
openspec/changes/archive/2026-04-19-lan-file-distribution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-lan-file-distribution/specs/browser-client/: spec.md
openspec/changes/archive/2026-04-19-lan-file-distribution/specs/download-scheduler/: spec.md
openspec/changes/archive/2026-04-19-lan-file-distribution/specs/share-server/: spec.md
openspec/changes/lan-file-distribution/: tasks.md
openspec/specs/peer-relay/: spec.md
src/: App.vue  main.ts
src-client/: App.vue  fsaa.ts  webrtc.ts
src-shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  main.rs  scheduler.rs  server.rs  state.rs
